fix: home page navbar overflowing

--- a/components/HomePage/Navbar/Navbar.css
+++ b/components/HomePage/Navbar/Navbar.css
@@ -28,18 +28,23 @@
   margin-right: 2rem;
 }
 
-.navbar .btn {
-  align-items: center;
-  background-color: #333;
-  border-radius: 40px;
+.navbar .nav-menu {
   display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 40px;
+  padding: 0.5rem 1rem;
   gap: 2rem;
 }
 
-.navbar .btn a {
-  color: white;
+.navbar .nav-menu a {
+  color: black;
   text-decoration: none;
   font-weight: 500;
+}
+
+.nav-menu a:hover {
+  color: #3596f1;
 }
 
 .navbar .flex {
